--- a/src/kaizen/DailyBreakdown.fxml
+++ b/src/kaizen/DailyBreakdown.fxml
@@ -61,18 +61,18 @@
                <children>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="large-label" text="Daily Breakdown of Time Spent">
                      <GridPane.margin>
-                        <Insets bottom="575.0" left="350.0" />
+                        <Insets bottom="575.0" left="300.0" />
                      </GridPane.margin>
                   </Text>
-                  <Button fx:id="weeklyBreakdown" mnemonicParsing="false" onAction="#handleWeeklyBreakdown" text="Weekly Breakdown">
+                  <Button fx:id="weeklyBreakdown" mnemonicParsing="false" onAction="#handleWeeklyBreakdown" prefHeight="39.0" prefWidth="179.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Weekly Breakdown">
                      <font>
                         <Font size="24.0" />
                      </font>
                      <GridPane.margin>
-                        <Insets left="500.0" top="575.0" />
+                        <Insets left="575.0" top="575.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="weeklyTrends" mnemonicParsing="false" onAction="#handleWeeklyTrends" prefHeight="45.0" prefWidth="201.0" text="Weekly Trends">
+                  <Button fx:id="weeklyTrends" mnemonicParsing="false" onAction="#handleWeeklyTrends" prefHeight="39.0" prefWidth="174.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Weekly Trends">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -91,9 +91,9 @@
                         <Insets bottom="100.0" left="100.0" right="100.0" top="100.0" />
                      </GridPane.margin>
                   </BarChart>
-                  <DatePicker fx:id="dailyChartDtPicker" onAction="#loadGraph">
+                  <DatePicker fx:id="dailyChartDtPicker" onAction="#loadGraph" promptText="Date of day">
                      <GridPane.margin>
-                        <Insets left="275.0" top="575.0" />
+                        <Insets left="300.0" top="575.0" />
                      </GridPane.margin>
                   </DatePicker>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Duration">
@@ -106,14 +106,19 @@
                         <Insets left="50.0" top="35.0" />
                      </GridPane.margin>
                   </Text>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Select a date to see that day's activities:" wrappingWidth="162.79385375976562">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Select day:" wrappingWidth="73.79385375976562">
                      <font>
                         <Font size="15.0" />
                      </font>
                      <GridPane.margin>
-                        <Insets left="125.0" top="575.0" />
+                        <Insets left="220.0" top="575.0" />
                      </GridPane.margin>
                   </Text>
+                  <Button fx:id="backBtn" mnemonicParsing="false" onAction="#handleTimeSheets" prefHeight="39.0" prefWidth="75.0" styleClass="buttons" text="Back">
+                     <GridPane.margin>
+                        <Insets left="50.0" top="575.0" />
+                     </GridPane.margin>
+                  </Button>
                </children>
             </GridPane>
          </center></BorderPane>
