Trends, chart edits to include Activities (corrected)

--- a/src/kaizen/Timesheets.fxml
+++ b/src/kaizen/Timesheets.fxml
@@ -33,6 +33,11 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
+            <Rectangle fx:id="categoryColourShape" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="32.0" stroke="TRANSPARENT" strokeType="INSIDE" width="38.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
+               <GridPane.margin>
+                  <Insets bottom="25.0" left="20.0" right="275.0" top="25.0" />
+               </GridPane.margin>
+            </Rectangle>
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Date" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <font>
                   <Font size="20.0" />
@@ -187,11 +192,6 @@
                   <Insets bottom="25.0" left="20.0" right="275.0" top="25.0" />
                </GridPane.margin>
             </ListView>
-            <Rectangle fx:id="categoryColourShape" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" stroke="TRANSPARENT" strokeType="INSIDE" width="39.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets left="20.0" />
-               </GridPane.margin>
-            </Rectangle>
          </children>
       </GridPane>
    </children>
