--- a/src/kaizen/Settings.fxml
+++ b/src/kaizen/Settings.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.image.*?>
@@ -13,14 +14,14 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="vbox-bar" stylesheets="@stylesheet.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.SettingsController">
    <left>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" styleClass="menu-panel" stylesheets="@stylesheet.css" BorderPane.alignment="CENTER">
+      <BorderPane prefHeight="720.0" prefWidth="0.0" styleClass="menu-panel" stylesheets="@stylesheet.css" BorderPane.alignment="CENTER">
          <center>
             <VBox prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
                   <ToggleButton fx:id="kanbanBoard" mnemonicParsing="false" onAction="#handleKanbanBoard" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="KANBAN BOARD" />
                   <ToggleButton fx:id="deepFocus" mnemonicParsing="false" onAction="#handleDeepFocus" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="DEEP FOCUS" />
                   <ToggleButton fx:id="taskTracker" mnemonicParsing="false" onAction="#handleTaskTracker" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="TASK TRACKER" />
-                  <ToggleButton fx:id="timeDashboard" mnemonicParsing="false" onAction="#handleTimeDashboard" prefHeight="50.0" prefWidth="200.0" styleClass="current-menu-toggle" stylesheets="@stylesheet.css" text="TIME DASHBOARD" />
+                  <ToggleButton fx:id="timeDashboard" mnemonicParsing="false" onAction="#handleTimeDashboard" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="TIME DASHBOARD" />
                   <ToggleButton fx:id="dailyLearnings" mnemonicParsing="false" onAction="#handleDailyLearnings" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="DAILY LEARNINGS" />
                </children>
                <opaqueInsets>
@@ -35,7 +36,7 @@
             <VBox prefHeight="150.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                <children>
                   <ToggleButton fx:id="settingsButton" mnemonicParsing="false" onAction="#handleSettings" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="ABOUT" />
-                  <ToggleButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="SETTINGS" />
+                  <ToggleButton layoutX="10.0" layoutY="10.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0" styleClass="current-menu-toggle" stylesheets="@stylesheet.css" text="SETTINGS" />
                   <Button fx:id="signOutButtons" mnemonicParsing="false" onAction="#handleSignOut" prefHeight="50.0" prefWidth="200.0" styleClass="menu-toggle" stylesheets="@stylesheet.css" text="SIGN OUT" />
                </children></VBox>
          </bottom>
@@ -48,50 +49,13 @@
          </top>
       </BorderPane>
    </left>
-   <right>
-      <BorderPane prefHeight="720.0" prefWidth="1080.0" BorderPane.alignment="CENTER">
-         <center>
-            <GridPane fx:id="grid" BorderPane.alignment="CENTER">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="large-label" text="Settings">
-                     <GridPane.margin>
-                        <Insets bottom="200.0" left="475.0" />
-                     </GridPane.margin>
-                  </Text>
-                  <Button fx:id="editCategories" mnemonicParsing="false" onAction="#handlePopUpEditCategories" prefHeight="34.0" prefWidth="188.0" stylesheets="@stylesheet.css" text="Edit Categories">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <GridPane.margin>
-                        <Insets left="50.0" />
-                     </GridPane.margin>
-                     <styleClass>
-                        <String fx:value="small-label" />
-                        <String fx:value="buttons" />
-                     </styleClass>
-                  </Button>
-                  <Button fx:id="editActivities" mnemonicParsing="false" onAction="#handlePopUpEditActivities" prefHeight="34.0" prefWidth="188.0" stylesheets="@stylesheet.css" text="Edit Activities">
-                     <font>
-                        <Font size="24.0" />
-                     </font>
-                     <styleClass>
-                        <String fx:value="small-label" />
-                        <String fx:value="buttons" />
-                     </styleClass>
-                     <GridPane.margin>
-                        <Insets left="50.0" top="150.0" />
-                     </GridPane.margin>
-                  </Button>
-               </children>
-            </GridPane>
-         </center></BorderPane>
-   </right>
+   <center>
+      <AnchorPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <Label layoutX="52.0" layoutY="29.0" styleClass="large-label" text="Settings" />
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="426.0" layoutX="44.0" layoutY="109.0" stroke="BLACK" strokeType="INSIDE" width="399.0" />
+            <Label layoutX="180.0" layoutY="116.0" styleClass="small-label" text="Edit Preferences" />
+         </children>
+      </AnchorPane>
+   </center>
 </BorderPane>
