--- a/src/kaizen/WeeklyTrends.fxml
+++ b/src/kaizen/WeeklyTrends.fxml
@@ -61,9 +61,9 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eef7ff80" height="328.0" stroke="BLACK" strokeType="INSIDE" width="217.0">
+                  <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#eef7ff80" height="401.0" stroke="BLACK" strokeType="INSIDE" width="217.0">
                      <GridPane.margin>
-                        <Insets bottom="125.0" left="850.0" />
+                        <Insets bottom="50.0" left="850.0" />
                      </GridPane.margin>
                   </Rectangle>
                   <LineChart fx:id="weeklyTrendsLineChart">
@@ -103,7 +103,7 @@
                         <Insets bottom="350.0" left="865.0" right="25.0" />
                      </GridPane.margin>
                   </DatePicker>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Hours (%)">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Percentage of hours spent" textAlignment="RIGHT" wrappingWidth="73.68728637695312">
                      <GridPane.margin>
                         <Insets left="20.0" />
                      </GridPane.margin>
@@ -134,7 +134,7 @@
                         <Insets bottom="15.0" left="865.0" right="25.0" />
                      </GridPane.margin>
                   </ChoiceBox>
-                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Select an activity" wrappingWidth="173.0">
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Select an activity (up to 3)" wrappingWidth="193.4444580078125">
                      <font>
                         <Font size="15.0" />
                      </font>
@@ -144,20 +144,25 @@
                   </Text>
                   <Button fx:id="loadGraphButton" mnemonicParsing="false" onAction="#loadGraph" prefHeight="29.0" prefWidth="112.0" text="Load graph">
                      <GridPane.margin>
-                        <Insets left="865.0" right="25.0" top="100.0" />
+                        <Insets left="865.0" right="25.0" top="275.0" />
                      </GridPane.margin>
                      <font>
                         <Font size="15.0" />
                      </font>
                   </Button>
-                  <Button fx:id="backBtn" mnemonicParsing="false" onAction="#handlePieChart" prefHeight="13.0" prefWidth="61.0" styleClass="buttons" text="Back">
+                  <Button fx:id="backBtn" mnemonicParsing="false" onAction="#handlePieChart" prefHeight="35.0" prefWidth="79.0" styleClass="buttons" text="Back">
                      <GridPane.margin>
                         <Insets left="40.0" top="-575.0" />
                      </GridPane.margin>
                   </Button>
                   <ChoiceBox fx:id="activityChoiceBox2" prefHeight="27.0" prefWidth="191.0">
                      <GridPane.margin>
-                        <Insets left="850.0" top="300.0" />
+                        <Insets left="865.0" top="75.0" />
+                     </GridPane.margin>
+                  </ChoiceBox>
+                  <ChoiceBox fx:id="activityChoiceBox3" prefHeight="27.0" prefWidth="191.0">
+                     <GridPane.margin>
+                        <Insets left="865.0" top="175.0" />
                      </GridPane.margin>
                   </ChoiceBox>
                </children>
