--- a/src/kaizen/WeeklyTrends.fxml
+++ b/src/kaizen/WeeklyTrends.fxml
@@ -129,9 +129,9 @@
                         <Insets bottom="170.0" left="865.0" right="25.0" />
                      </GridPane.margin>
                   </TextField>
-                  <ChoiceBox fx:id="activityChoiceBox" prefHeight="27.0" prefWidth="191.0">
+                  <ChoiceBox fx:id="activityChoiceBox" prefHeight="27.0" prefWidth="170.0">
                      <GridPane.margin>
-                        <Insets bottom="15.0" left="865.0" right="25.0" />
+                        <Insets bottom="15.0" left="885.0" right="25.0" />
                      </GridPane.margin>
                   </ChoiceBox>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Select an activity (up to 3)" wrappingWidth="193.4444580078125">
@@ -144,7 +144,7 @@
                   </Text>
                   <Button fx:id="loadGraphButton" mnemonicParsing="false" onAction="#loadGraph" prefHeight="29.0" prefWidth="112.0" text="Load graph">
                      <GridPane.margin>
-                        <Insets left="865.0" right="25.0" top="275.0" />
+                        <Insets left="885.0" top="275.0" />
                      </GridPane.margin>
                      <font>
                         <Font size="15.0" />
@@ -155,16 +155,40 @@
                         <Insets left="40.0" top="-575.0" />
                      </GridPane.margin>
                   </Button>
-                  <ChoiceBox fx:id="activityChoiceBox2" prefHeight="27.0" prefWidth="191.0">
+                  <ChoiceBox fx:id="activityChoiceBox2" prefHeight="27.0" prefWidth="170.0">
+                     <GridPane.margin>
+                        <Insets left="885.0" top="75.0" />
+                     </GridPane.margin>
+                  </ChoiceBox>
+                  <ChoiceBox fx:id="activityChoiceBox3" prefHeight="27.0" prefWidth="170.0">
+                     <GridPane.margin>
+                        <Insets left="885.0" top="175.0" />
+                     </GridPane.margin>
+                  </ChoiceBox>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="1." wrappingWidth="12.4444580078125">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                     <GridPane.margin>
+                        <Insets bottom="20.0" left="865.0" top="5.0" />
+                     </GridPane.margin>
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="2." wrappingWidth="18.4444580078125">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                      <GridPane.margin>
                         <Insets left="865.0" top="75.0" />
                      </GridPane.margin>
-                  </ChoiceBox>
-                  <ChoiceBox fx:id="activityChoiceBox3" prefHeight="27.0" prefWidth="191.0">
+                  </Text>
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="3." wrappingWidth="18.4444580078125">
+                     <font>
+                        <Font size="15.0" />
+                     </font>
                      <GridPane.margin>
                         <Insets left="865.0" top="175.0" />
                      </GridPane.margin>
-                  </ChoiceBox>
+                  </Text>
                </children>
             </GridPane>
          </center></BorderPane>
