--- a/src/kaizen/PopUpLearnings.fxml
+++ b/src/kaizen/PopUpLearnings.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.shape.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
@@ -9,13 +10,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.PopUpLearningsController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="kaizen.PopUpLearningsController">
    <children>
       <ImageView fitHeight="600.0" fitWidth="400.0" layoutX="7.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <GridPane layoutX="150.0" layoutY="5.0" prefHeight="783.0" prefWidth="460.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="5.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="860.0" minWidth="10.0" prefWidth="855.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="426.0" minWidth="0.0" prefWidth="5.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="121.0" minHeight="2.0" prefHeight="96.0" vgrow="SOMETIMES" />
@@ -23,29 +24,81 @@
           <RowConstraints maxHeight="224.0" minHeight="0.0" prefHeight="70.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label prefHeight="53.0" prefWidth="395.0" styleClass="large-label" stylesheets="@stylesheet.css" text="Past 30 day learnings">
+            <Label prefHeight="53.0" prefWidth="395.0" styleClass="large-label" stylesheets="@stylesheet.css" text="Diary of Learnings">
                <GridPane.margin>
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TableView fx:id="well30Report" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+            <TableView fx:id="entries" prefHeight="664.0" prefWidth="624.0" GridPane.rowIndex="1">
               <columns>
-                <TableColumn fx:id="wellColumn" prefWidth="318.0" text="Things you did well" />
-                <TableColumn fx:id="well30Count" minWidth="0.0" prefWidth="100.0" text="Encounters" />
+                <TableColumn fx:id="date" prefWidth="115.0" text="Date" />
+                <TableColumn fx:id="achievements" prefWidth="359.0" text="Achievements" />
+                  <TableColumn fx:id="improvements" minWidth="9.0" prefWidth="370.0" text="Improvements" />
               </columns>
                <GridPane.margin>
-                  <Insets left="5.0" right="10.0" />
+                  <Insets left="10.0" />
                </GridPane.margin>
             </TableView>
-            <TableView fx:id="better30Report" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-              <columns>
-                <TableColumn fx:id="betterColumn" prefWidth="311.0" text="Things you could have done better" />
-                <TableColumn fx:id="better30Count" prefWidth="103.0" text="Encounters" />
-              </columns>
+            <GridPane GridPane.rowIndex="2">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Button fx:id="back" mnemonicParsing="false" onAction="#handleBack" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Back">
+                     <GridPane.margin>
+                        <Insets left="50.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="add" mnemonicParsing="false" onAction="#handleAdd" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Add Entry" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="50.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="delete" mnemonicParsing="false" onAction="#handleDelete" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Delete Entry" GridPane.columnIndex="3">
+                     <GridPane.margin>
+                        <Insets left="50.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Button fx:id="edit" mnemonicParsing="false" onAction="#handleEdit" prefHeight="35.0" prefWidth="116.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Edit Entry" GridPane.columnIndex="2">
+                     <GridPane.margin>
+                        <Insets left="50.0" />
+                     </GridPane.margin>
+                  </Button>
+               </children>
+            </GridPane>
+            <Button fx:id="refresh" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Refresh">
                <GridPane.margin>
-                  <Insets left="5.0" right="10.0" />
+                  <Insets left="700.0" top="40.0" />
                </GridPane.margin>
-            </TableView>
+            </Button>
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="16.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="269.0" minWidth="10.0" prefWidth="269.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="15.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="195.0" minHeight="0.0" prefHeight="5.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="534.0" minHeight="10.0" prefHeight="534.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label styleClass="small-label" stylesheets="@stylesheet.css" text="Edit your learnings" GridPane.columnIndex="1">
+                     <GridPane.margin>
+                        <Insets left="75.0" />
+                     </GridPane.margin>
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </GridPane>
          </children>
       </GridPane>
    </children>
