--- a/src/kaizen/PopUpLearnings.fxml
+++ b/src/kaizen/PopUpLearnings.fxml
@@ -15,12 +15,13 @@
       <ImageView fitHeight="600.0" fitWidth="400.0" layoutX="7.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <GridPane layoutX="150.0" layoutY="5.0" prefHeight="783.0" prefWidth="460.0" AnchorPane.bottomAnchor="12.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="5.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="860.0" minWidth="10.0" prefWidth="855.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="426.0" minWidth="0.0" prefWidth="5.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="860.0" minWidth="10.0" prefWidth="821.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="426.0" minWidth="0.0" prefWidth="339.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints maxHeight="121.0" minHeight="2.0" prefHeight="96.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="691.0" minHeight="10.0" prefHeight="610.0" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="121.0" minHeight="10.0" prefHeight="59.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="691.0" minHeight="10.0" prefHeight="603.0" vgrow="SOMETIMES" />
           <RowConstraints maxHeight="224.0" minHeight="0.0" prefHeight="70.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
@@ -29,7 +30,7 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </Label>
-            <TableView fx:id="entries" prefHeight="664.0" prefWidth="624.0" GridPane.rowIndex="1">
+            <TableView fx:id="entries" prefHeight="612.0" prefWidth="782.0" GridPane.rowIndex="2">
               <columns>
                 <TableColumn fx:id="date" prefWidth="115.0" text="Date" />
                 <TableColumn fx:id="achievements" prefWidth="359.0" text="Achievements" />
@@ -39,7 +40,7 @@
                   <Insets left="10.0" />
                </GridPane.margin>
             </TableView>
-            <GridPane GridPane.rowIndex="2">
+            <GridPane GridPane.rowIndex="1">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -50,55 +51,79 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Button fx:id="back" mnemonicParsing="false" onAction="#handleBack" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Back">
+                  <Button fx:id="add" mnemonicParsing="false" onAction="#handleAdd" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Add Entry">
                      <GridPane.margin>
                         <Insets left="50.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="add" mnemonicParsing="false" onAction="#handleAdd" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Add Entry" GridPane.columnIndex="1">
+                  <Button fx:id="delete" mnemonicParsing="false" onAction="#handleDelete" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Delete Entry" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="50.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="delete" mnemonicParsing="false" onAction="#handleDelete" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Delete Entry" GridPane.columnIndex="3">
+                  <Button fx:id="edit" mnemonicParsing="false" onAction="#handleSelect" prefHeight="35.0" prefWidth="127.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Select Entry" GridPane.columnIndex="2">
                      <GridPane.margin>
-                        <Insets left="50.0" />
+                        <Insets left="40.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="edit" mnemonicParsing="false" onAction="#handleEdit" prefHeight="35.0" prefWidth="116.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Edit Entry" GridPane.columnIndex="2">
+                  <Button fx:id="refresh" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Refresh" GridPane.columnIndex="3">
                      <GridPane.margin>
-                        <Insets left="50.0" />
+                        <Insets left="30.0" />
                      </GridPane.margin>
                   </Button>
                </children>
             </GridPane>
-            <Button fx:id="refresh" mnemonicParsing="false" onAction="#handleRefresh" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Refresh">
-               <GridPane.margin>
-                  <Insets left="700.0" top="40.0" />
-               </GridPane.margin>
-            </Button>
-            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <GridPane GridPane.columnIndex="1" GridPane.rowIndex="2">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="16.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="269.0" minWidth="10.0" prefWidth="269.0" />
-                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="15.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="95.0" minWidth="10.0" prefWidth="19.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="269.0" minWidth="10.0" prefWidth="266.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints maxHeight="195.0" minHeight="0.0" prefHeight="5.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="534.0" minHeight="10.0" prefHeight="534.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="195.0" minHeight="0.0" prefHeight="84.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="543.0" minHeight="0.0" prefHeight="52.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="543.0" minHeight="0.0" prefHeight="56.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="543.0" minHeight="10.0" prefHeight="49.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="543.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="543.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+                  <RowConstraints maxHeight="543.0" minHeight="10.0" prefHeight="282.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label styleClass="small-label" stylesheets="@stylesheet.css" text="Edit your learnings" GridPane.columnIndex="1">
+                  <Label styleClass="small-label" stylesheets="@stylesheet.css" text="Select entry to edit" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
-                        <Insets left="75.0" />
+                        <Insets left="55.0" />
                      </GridPane.margin>
                      <font>
                         <Font name="System Bold" size="15.0" />
                      </font>
                   </Label>
+                  <DatePicker fx:id="datePicker" prefHeight="31.0" prefWidth="230.0" promptText="Date" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </DatePicker>
+                  <ComboBox fx:id="achieveBox" editable="true" prefHeight="31.0" prefWidth="233.0" promptText="Achievement" GridPane.columnIndex="1" GridPane.rowIndex="3">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </ComboBox>
+                  <ComboBox fx:id="improveBox" editable="true" prefHeight="31.0" prefWidth="235.0" promptText="Improvement" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                     <GridPane.margin>
+                        <Insets left="20.0" />
+                     </GridPane.margin>
+                  </ComboBox>
+                  <Button fx:id="submit" mnemonicParsing="false" onAction="#editLearning" styleClass="buttons" stylesheets="@stylesheet.css" text="Submit" GridPane.columnIndex="1" GridPane.rowIndex="5">
+                     <GridPane.margin>
+                        <Insets left="90.0" />
+                     </GridPane.margin>
+                  </Button>
+                  <Label fx:id="confirm" text="Successfully updated learnings!" GridPane.columnIndex="1" GridPane.rowIndex="6" />
                </children>
             </GridPane>
+            <Button fx:id="back" mnemonicParsing="false" onAction="#handleBack" prefHeight="35.0" prefWidth="119.0" styleClass="buttons" stylesheets="@stylesheet.css" text="Back" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="50.0" />
+               </GridPane.margin>
+            </Button>
          </children>
       </GridPane>
    </children>
