--- a/src/kaizen/EditEntriesPopUp.fxml
+++ b/src/kaizen/EditEntriesPopUp.fxml
@@ -188,6 +188,7 @@
                   <Insets left="20.0" />
                </GridPane.margin>
             </Text>
+            <TextField fx:id="timeIDField" editable="false" text="ID" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
    </children>
